--- a/Assignment/Practice197_7/app/src/main/res/layout/activity_main.xml
+++ b/Assignment/Practice197_7/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,31 @@
     android:orientation="vertical">
 
     <CheckBox
+        android:id="@+id/cb1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enabled 속성" />
 
     <CheckBox
+        android:id="@+id/cb2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Clickable 속성" />
 
     <CheckBox
+        android:id="@+id/cb3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="45도 회전" />
 
     <Button
+        android:id="@+id/btn1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:rotation="0"
+        android:enabled="false"
+        android:clickable="false"
+        android:layout_marginTop="100dp"
         android:text="Button" />
 
 </LinearLayout>
