--- a/Project10_1/app/src/main/res/layout/activity_main.xml
+++ b/Project10_1/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,23 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+        <RadioButton
+            android:id="@+id/rbSecond"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Second 액티비티"
+            android:checked="true"/>
+
+        <RadioButton
+            android:id="@+id/rbThird"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Third 액티비티"/>
+    </RadioGroup>
+
     <Button
         android:id="@+id/btnNewActivity"
         android:layout_width="match_parent"
