--- a/Project10_1/app/src/main/res/layout/third.xml
+++ b/Project10_1/app/src/main/res/layout/third.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00FF00">
+    android:background="#FF0000">
 
     <Button
-        android:id="@+id/btnReturn"
+        android:id="@+id/btnReturn2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="돌아가기"/>
